asteria/core/tests/errors/elaboration_errors/type_index_not_in_scope.asteriacore
data Foo [a : Type] where
   | MkFoo : Test$Foo(a)
   ;;
